fixed ugly line in overflow

--- a/css/screen.css
+++ b/css/screen.css
@@ -159,7 +159,6 @@ ul.posts {
   /* standard */
 
   #post pre {
-    border: 1px solid #ddd;
     background-color: #333;
     padding: 0 .4em;
   }
